--- a/force-app/main/default/classes/AzureEventIntegration_TEST.cls
+++ b/force-app/main/default/classes/AzureEventIntegration_TEST.cls
@@ -2,23 +2,13 @@
 global class AzureEventIntegration_TEST {
 
     @IsTest
-    private static void ConfirmedAzureEventIntegration() {
+    private static void sendEvents() {
         Test.startTest();
-        Test.setMock(HttpCalloutMock.class, new EventCalloutMock());
-        List<AzureEventIntegration.AzureResponse> responses = ConfirmedAzureEventIntegration.enrollStudent(new List<ConfirmedAzureEventIntegration.ConfirmedRequest>{ new ConfirmedAzureEventIntegration.ConfirmedRequest('learn.colostate.edu', '2023SP-AGBB-205-100', false) });
+        Test.setMock(HttpCalloutMock.class, BaseTestUtil.getEventCalloutMock());
+        AzureEventIntegration.AzureResponse response = AzureEventIntegration.sendEvents(new List<AzureEventIntegration.AzureEvent>{new AzureEventIntegration.AzureEvent('topic', 'eventType', 'subject', new Map<String, Object> {'test' => 'test'})}, false);
         Test.stopTest();
 
-        System.assert(responses.size() == 1);
-    }
-
-    global class EventCalloutMock implements HttpCalloutMock{
-      global HttpResponse respond(HTTPRequest req){
-        HttpResponse res = new HttpResponse();
-        res.setStatus('OK');
-        res.setStatusCode(200);
-        res.setBody('Event Created.');
-        return res;
-      }
+        System.assert(response.success);
     }
     
 }
