Account Request added.

--- a/force-app/main/default/classes/AzureEventIntegration_TEST.cls
+++ b/force-app/main/default/classes/AzureEventIntegration_TEST.cls
@@ -10,5 +10,21 @@ global class AzureEventIntegration_TEST {
 
         System.assert(response.success);
     }
+
+    @IsTest
+    private static void getAccount() {
+        RecordType deptType = [select Id from RecordType where DeveloperName = 'Administrative' LIMIT 1];
+        List<AccountRequestor.AccountRequest> requests = new List<AccountRequestor.AccountRequest>{new AccountRequestor.AccountRequest(deptType.Id, 'CSUOEE')};
+        
+        List<Account> accts = AccountRequestor.getAccount(requests);
+
+        System.assert(accts.get(0) == null);
+
+        Account acct = new Account(Name = 'test', RecordTypeId = deptType.Id, hed__School_Code__c = 'CSUOEE');
+        insert acct;
+
+        accts = AccountRequestor.getAccount(requests);
+        System.assert(accts.get(0) != null);
+    }
     
 }
