Triggers added to support midpoint

--- a/force-app/main/default/classes/CombinedFunctions_TEST.cls
+++ b/force-app/main/default/classes/CombinedFunctions_TEST.cls
@@ -36,5 +36,55 @@ private class CombinedFunctions_TEST {
 
         Test.stopTest();
     }
+
+    @IsTest
+    private static void midpointTriggers() {
+        Contact contact = new Contact(LastName = 'Test', EID__c = 'test-eid', CSU_ID__c = '123456789');
+        insert contact;
+
+        csumidp__HR_Directory_Entry__c entry = new csumidp__HR_Directory_Entry__c(Name = 'Test', csumidp__Midpoint_Id__c = '11111', csumidp__Net_Id__c = 'test-eid', csumidp__SIS_Person_Id__c = '123456789', csumidp__Last_Name__c = 'Test');
+        insert entry;
+
+        entry = [select Id, Primary_Contact__c from csumidp__HR_Directory_Entry__c where Id = :entry.Id LIMIT 1];
+        System.assert(entry.Primary_Contact__c.equals(contact.Id));
+
+        csumidp__HR_Directory_Entry__c dupe1 = new csumidp__HR_Directory_Entry__c(Name = 'Test', csumidp__Midpoint_Id__c = '22222', csumidp__Net_Id__c = 'test-eid2', csumidp__SIS_Person_Id__c = '987654321', csumidp__Last_Name__c = 'Test');
+        insert dupe1;
+
+        dupe1 = [select Id, Primary_Contact__c from csumidp__HR_Directory_Entry__c where Id = :dupe1.Id LIMIT 1];
+
+        entry.csumidp__SIS_Person_Id__c = '987654321';
+        dupe1.csumidp__SIS_Person_Id__c = '123456789';
+
+        update new List<csumidp__HR_Directory_Entry__c>{entry, dupe1};
+        
+        Contact contact1 = new Contact(LastName = 'Test', EID__c = 'test-eid3', CSU_ID__c = '111111111');
+        insert contact1;
+        Contact contact2 = new Contact(LastName = 'Test', EID__c = 'test-eid4', CSU_ID__c = '222222222');
+        insert contact2;
+
+        csumidp__HR_Directory_Entry__c hr = new csumidp__HR_Directory_Entry__c(Name = 'Test', csumidp__Midpoint_Id__c = '33333', csumidp__Net_Id__c = 'test-eid3', csumidp__SIS_Person_Id__c = '111111111', csumidp__Last_Name__c = 'Test');
+        insert hr;
+        hr = [select Id, Primary_Contact__c, csumidp__SIS_Person_Id__c from csumidp__HR_Directory_Entry__c where Id = :hr.Id LIMIT 1];
+
+        hr.csumidp__SIS_Person_Id__c = '222222222';
+        update hr;
+
+        hr = [select Id, Primary_Contact__c, csumidp__SIS_Person_Id__c from csumidp__HR_Directory_Entry__c where Id = :hr.Id LIMIT 1];
+        hr.csumidp__SIS_Person_Id__c = '333333333';
+
+        update hr;
+
+        hr = [select Id, Primary_Contact__c, csumidp__SIS_Person_Id__c from csumidp__HR_Directory_Entry__c where Id = :hr.Id LIMIT 1];
+        hr.csumidp__SIS_Person_Id__c = '123456789';
+
+        try {
+            update hr;
+            System.assert(false);
+        } catch (DmlException de) {
+            // This should fail
+            System.assert(true);
+        }
+    }
     
 }
